--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SRE - Sistema de reserva de equipamento</title>
+  <title>SAEE - Sistema de Acompanhamento de empréstimo de equipamentos</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Sistema de reserva de equipamentos</a>
+      <a class="navbar-brand" href="/">SAAE - Sistema de Acompanhamento de empréstimo de equipamentos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/">Ver Pedidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="/jobs/add.html">Solicitar</a>
+            <a class="nav-link btn btn-primary" href="/jobs/add">Solicitar</a>
           </li>
         </ul>
       </div>
