--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,35 +1,40 @@
-<div id="add-form-container" class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center">Divulgue a vaga preenchendo o formulário</h1>
-    </div>
-    <div id="form-box" class="col-md-12">
-      <h2>Preencha os dados da melhor forma possível para encontrar mais rápido seu dev!</h2>
-      <form action="/jobs/add" method="POST">
-        <div class="form-group">
-          <label for="title">Título da vaga:</label>
-          <input type="text" class="form-control" id="title" name="title" placeholder="Digite o título da vaga" required>
-          <small id="titleHelp" class="form-text text-muted">O título é muito importante, seja claro e objetivo.</small>
-        </div>
-        <div class="form-group">
-          <label for="description">Descrição da vaga:</label>
-          <textarea type="text" class="form-control" id="description" name="description" placeholder="Descreva as atividades do desenvolvedor..." required></textarea>
-        </div>
-        <div class="form-group">
-          <label for="company">Empresa contratante:</label>
-          <input type="text" class="form-control" id="company" name="company" placeholder="Digite a empresa que vai contratar" required>
-        </div>
-        <div class="form-group">
-          <label for="email">E-mail para contato:</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Digite o e-mail para contato" required>
-        </div>
-        <div class="form-group">
-          <label for="salary">Salário oferecido:</label>
-          <input type="text" class="form-control" id="salary" name="salary" placeholder="Digite o Salário da vaga" required>
-        </div>
-        <input type="hidden" name="new_job" value="1">
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
+  <div id="add-form-container" class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="text-center">Solicitação de Equipamento</h1>
+      </div>
+      <div id="form-box" class="col-md-12">
+        <h2>Preencha os dados da sua solicitação</h2>
+        <form action="">
+          
+          <div class="form-group">
+            <label for="title">Equipamento solicitado:</label>
+            <input type="text" class="form-control" id="title" name="title" placeholder="Digite o nome do equipamento solicitado" required>
+          </div>
+
+          <div class="form-group">
+            <label for="solicitante">Solicitante:</label>
+            <input type="solicitante" class="form-control" id="solicitante" name="solicitante" placeholder="Digite o nome do solicitante" required>
+          </div>
+
+          <div class="form-group">
+            <label for="disciplina">Disciplina:</label>
+            <input type="text" class="form-control" id="disciplina" name="disciplina" placeholder="Digite o nome da disciplina na qual o equipamento será utilizado" required></textarea>
+          </div>
+          
+          <div class="form-group">
+            <label for="local">Sala de aula:</label>
+            <input type="text" class="form-control" id="local" name="local" placeholder="Digite o nome / núnero da sala na qual o equipamento será utilizado" required>
+          </div>
+
+          <div class="form-group">
+            <label for="detalhes">Detalhes</label>
+            <textarea type="text" class="form-control" id="detalhes" name="detalhes" placeholder="Detalhe a prática acadêmica na qual o equipamento será utilizado."></textarea>
+          </div>
+
+          <input type="hidden" name="new_job" value="1">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
