--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,36 +18,20 @@
         <div class="col-md-12">
           <h2 id="job-list-title">Veja os equipamentos em uso</h2>
           <ul id="job-list" class="list-group">
-            <li class="list-group-item new-job">
+
+            {{#each jobs}}
+
+            <li class="list-group-item {{#if dataValues.new_job }}new-job{{/if}}">
               <img src="/img/Fig.avif" alt="Company">
-              <p>Empresa</p>
-              <h2>Título da vaga</h2>
-              <p>R$2000,00</p>
+              <p>{{dataValues.company}}</p>
+              <h2>{{dataValues.title}}</h2>
+              <p>R$ {{dataValues.salary}}</p>
               <span class="new-job-label">Nova</span>
               <a class="btn btn-primary">Ver vaga</a>
             </li>
-            <li class="list-group-item new-job">
-              <img src="/img/Fig.avif" alt="Company">
-              <p>Empresa</p>
-              <h2>Título da vaga</h2>
-              <p>R$2000,00</p>
-              <span class="new-job-label">Nova</span>
-              <a class="btn btn-primary">Ver vaga</a>
-            </li>
-            <li class="list-group-item">
-              <img src="/img/Fig.avif" alt="Company">
-              <p>Empresa</p>
-              <h2>Título da vaga</h2>
-              <p>R$2000,00</p>
-              <a class="btn btn-primary">Ver vaga</a>
-            </li>            
-            <li class="list-group-item">
-              <img src="/img/Fig.avif" alt="Company">
-              <p>Empresa</p>
-              <h2>Título da vaga</h2>
-              <p>R$2000,00</p>
-              <a class="btn btn-primary">Ver vaga</a>
-            </li>
+
+            {{/each}}
+
           </ul>
         </div>
       </div>
