--- a/views/add.hbs
+++ b/views/add.hbs
@@ -3,9 +3,13 @@
       <div class="col-md-12">
         <h1 class="text-center">Solicitação de Equipamento</h1>
       </div>
+      
+
       <div id="form-box" class="col-md-12">
         <h2>Preencha os dados da sua solicitação</h2>
-        <form action="">
+        
+        <!--  INSERÇÃO DE DADOS NO BANCO  -->
+        <form action="/jobs/add" method = "POST">
           
           <div class="form-group">
             <label for="title">Equipamento solicitado:</label>
