--- a/views/add.hbs
+++ b/views/add.hbs
@@ -18,7 +18,7 @@
 
           <div class="form-group">
             <label for="solicitante">Solicitante:</label>
-            <input type="solicitante" class="form-control" id="solicitante" name="solicitante" placeholder="Digite o nome do solicitante" required>
+            <input type="text" class="form-control" id="solicitante" name="solicitante" placeholder="Digite o nome da disciplina na qual o equipamento será utilizado" required></textarea>
           </div>
 
           <div class="form-group">
