--- a/views/index.hbs
+++ b/views/index.hbs
@@ -46,11 +46,11 @@
 
             <li class="list-group-item {{#if dataValues.new_job }}new-job{{/if}}">
               <img src="/img/Fig.avif" alt="Company">
-              <p>{{dataValues.company}}</p>
-              <h2>{{dataValues.title}}</h2>
-              <p>R$ {{dataValues.salary}}</p>
+              <p>Local / Sala: {{dataValues.local}}</p>
+              <p><h2>{{dataValues.title}}</h2></p> 
+              <p>Solicitante: {{dataValues.solicitante}} </p>
               <span class="new-job-label">Nova</span>
-              <a class="btn btn-primary">Ver vaga</a>
+              <a class="btn btn-primary">Ver requisição</a>
             </li>
 
             {{/each}}
